--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon.png" />
     <link rel="stylesheet" href="/build/bundle.css" />
@@ -30,7 +31,7 @@
       href="/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <link rel="stylesheet" href="/assets/styles/tailwind.css" />
-    <title>TAACS</title>
+    <title>Notus Svelte</title>
 
     <script>
       if (process === undefined) {
