--- a/public/200.html
+++ b/public/200.html
@@ -1,7 +1,7 @@
 <!--
 
 =========================================================
-* Notus Svelte - v1.1.0 based on Tailwind Starter Kit by Creative Tim
+* TAACS - v1.1.0 based on Tailwind Starter Kit by Creative Tim
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/notus-svelte
@@ -31,7 +31,7 @@
       href="/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <link rel="stylesheet" href="/assets/styles/tailwind.css" />
-    <title>Notus Svelte</title>
+    <title>TAACS</title>
 
     <script>
       if (process === undefined) {
