--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
 
 =========================================================
-* Notus Svelte - v1.1.0 based on Tailwind Starter Kit by Creative Tim
+* TAACS - v1.1.0 based on Tailwind Starter Kit by Creative Tim
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/notus-svelte
